# cppexport_py

./: .gitignore  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
cppexport_py/: CMakeLists.txt  __init__.py  example.cpp  human.cpp  human.h
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_cppexport_py.py  test_example.py
